@startuml BaseEntities

class Excercise {
    + id: int
    + name: String 
    + level: int 
    + category: String
    + equipment: String
    + description: String  
    + muscle: String 
    + secondaryMuscle: String 
    __
    + Exercise(id, name, level, category, equipment, description, muscle, secondaryMuscle) 
    + toString(): String 
    + copyWith(id?, name?, level?, category?, equipment?, description?, muscle?, secondaryMuscle?): Excercise
}

interface Weight <<mixin>> {
    + mass: double
}

class WeightedExcercise extends Excercise implements Weight {
    + WeightedExcercise(id, name, level, category, equipment, description, muscle, secondaryMuscle, mass)
}
' class DurationableExercise extends Exercise {
'     + duration: double 
'     __
'     + DurationableExercise(id, name, level, duration)
' }

' class RepeatableExercise extends Exercise {
'     + reps: int 
'     + rounds: int 
'     __
'     + RepeatableExercise(id, name, level, reps, rounds) 
' }

' interface Equipmentable <<mixin>> {
'     + equipment: Equipment 
' }

' class RepeatableEquipmentableExercise extends RepeatableExercise implements Equipmentable {
'     __
'     + RepeatableEquipmentableExercise(id, name, level, reps, rounds, equipment)
' }

' class DurationableEquipmentableExercise extends DurationableExercise implements Equipmentable {
'     __
'     + DurationableEquipmentableExercise(id, name, level, duration, equipment)
' }

' class Weight {
'     - Mass 
'     __
'     + GetMass()
' }

' class Machine {
' }

' class Equipment {
'     + Name
' }

' Equipment <|-- Machine
' Equipment <|-- Weight

@enduml